# nucleo-32-rs

./: Cargo.toml  README.md  build.rs
.cargo/: config.toml
src/: main.rs
